# CanaryWorkbench

./: ActorDelegate.qml  ActorDelegateForm.ui.qml  ActorForm.qml  ActorItem.qml  ActorItemForm.ui.qml  ActorList.qml  ActorListForm.ui.qml  ArgumentDialog.qml  CMakeLists.txt  CmdActor.qml  HomeForm.ui.qml  PipeForm.qml  PipeItem.qml  PipeItemForm.ui.qml  README.md  SpaceDelegate.qml  SpaceDelegateForm.ui.qml  SpaceItem.qml  SpaceItemForm.ui.qml  SpaceList.qml  SpaceListForm.qml  SpaceListForm.ui.qml  SystemMenu.qml  TaskListForm.qml  WorkBox.qml  Workbench.qml  WorkspaceForm.qml  cactor.cpp  cactor.h  canary-workbench_zh_CN.ts  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  utils.cpp  utils.h  workspace.cpp  workspace.h
